Stop arrow icons from disappearing on Safari
They would disappear on hover, and act weirdly.

--- a/app/routes/pages/components/PageHierarchy.css
+++ b/app/routes/pages/components/PageHierarchy.css
@@ -75,7 +75,6 @@
 }
 
 .dropdownIcon {
-  padding-left: 8px;
   transition: var(--easing-medium);
 }
 
